<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/primaryBackgroundColor"
    tools:context=".KebutuhanKaloriFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:text="@string/hello_blank_fragment" />-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weightEditTextLayout"
        android:layout_marginEnd="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heightHint"
            android:inputType="numberPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/heightEditTextLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weightHint"
            android:inputType="numberPassword"
            android:textSize="16sp"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/imt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/imt"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/heightEditTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bbi"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/bbi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bbi"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/heightEditTextLayout"
        app:layout_constraintStart_toEndOf="@+id/imt"
        app:layout_constraintEnd_toStartOf="@+id/bmr"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/bmr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bmr"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/heightEditTextLayout"
        app:layout_constraintStart_toEndOf="@+id/bbi"
        app:layout_constraintEnd_toStartOf="@+id/akg"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/akg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/akg"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/heightEditTextLayout"
        app:layout_constraintStart_toEndOf="@+id/bmr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/imtDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/imtDesc"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bbiDesc"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="5dp" />
    <TextView
        android:id="@+id/bbiDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bbiDesc"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/bbi"
        app:layout_constraintStart_toEndOf="@+id/imtDesc"
        app:layout_constraintEnd_toStartOf="@+id/bmrDesc"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="5dp" />
    <TextView
        android:id="@+id/bmrDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bmrDesc"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/bmr"
        app:layout_constraintStart_toEndOf="@+id/bbiDesc"
        app:layout_constraintEnd_toStartOf="@+id/akgDesc"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="5dp" />
    <TextView
        android:id="@+id/akgDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/akgDesc"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/akg"
        app:layout_constraintStart_toEndOf="@+id/bmr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.2"
        android:layout_marginTop="5dp" />


    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryTitle"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/akgDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/categoryDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryDesc"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/categoryTitle"
        app:layout_constraintTop_toBottomOf="@id/akgDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/categoryResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryResultTitle"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/categoryTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/categoryResultDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryResultDesc"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/categoryTitle"
        app:layout_constraintTop_toBottomOf="@id/categoryDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="5dp" />

    <View
        android:id="@+id/lineSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/categoryResultTitle"/>

    <TextView
        android:id="@+id/categoryKurus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryKurus"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/lineSeparator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/categoryKurusDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryKurusDesc"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/categoryKurus"
        app:layout_constraintTop_toBottomOf="@id/lineSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/categoryNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryNormal"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/categoryKurus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/categoryNormalDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryNormalDesc"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/categoryNormal"
        app:layout_constraintTop_toBottomOf="@id/categoryKurusDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/categoryGemuk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryGemuk"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/categoryNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/categoryGemukDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryGemukDesc"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/categoryGemuk"
        app:layout_constraintTop_toBottomOf="@id/categoryNormalDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/categoryObesitas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryObesitas"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/categoryGemuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/categoryObesitasDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryObesitasDesc"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/categoryObesitas"
        app:layout_constraintTop_toBottomOf="@id/categoryGemukDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="5dp" />

    <View
        android:id="@+id/lineSeparator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/categoryObesitas"/>

    <TextView
        android:id="@+id/normalWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/normalWeight"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/lineSeparator2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/normalWeightDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/categoryResultDesc"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/normalWeight"
        app:layout_constraintTop_toBottomOf="@id/lineSeparator2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginTop="5dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kebutuhanKaloriButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kebutuhanKaloriButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>