<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryBackgroundColor"
    android:padding="20dp"
    tools:context=".AktifitasFisikFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:text="@string/hello_blank_fragment" />-->

    <RadioGroup
        android:checkedButton="@+id/dayQuestionSwitch"
        android:id="@+id/toggle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/swith_outline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="1dp"
            android:id="@+id/dayQuestionSwitch"
            android:background="@drawable/toggle_widget_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/dayQuestionSwitch"
            android:textColor="@color/primaryTextColor" />

        <RadioButton
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/nightQuestionSwitch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nightQuestionSwitch"
            android:textColor="@color/primaryTextColor" />
    </RadioGroup>

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dayQuestionTitle"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dayQuestion"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/questionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/answerRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/answer1"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintStart_toStartOf="parent" >
        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayAnswer1"
            android:buttonTint="@color/primaryColor"/>
        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayAnswer2"
            android:buttonTint="@color/primaryColor"/>
        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayAnswer3"
            android:buttonTint="@color/primaryColor"/>
        <RadioButton
            android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayAnswer4"
            android:buttonTint="@color/primaryColor"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aktifitasFisikSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/aktifitasFisikButton"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answerRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>